# mlops_cicd

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  mlflow.db  mlflow_test.py  mlflow_test2.py  pyproject.toml  start.py
.dvc/: config
.github/workflows/: main.yml
data/interim/: .gitignore
docs/: mkdocs.yml
docs/docs/: index.md
mlops_cicd/: __init__.py
mlops_cicd/data/: clean_data.py  select_region.py
mlops_cicd/features/: add_features.py
