[tool.poetry]
name = "mlops_cicd"
package-mode = false
version = "0.1.0"
description = "MLOps course project"
authors = ["Alexey Cherkasov <alaxahml@gmail.com>"]
license = "none"

[tool.poetry.dependencies]
python = "^3.13"

pandas = "^2.2.3"
numpy = "^2.2.5"

scikit-learn = "^1.6.1"

xgboost = "^3.0.0"
lightgbm = "^4.6.0"

click = "^8.1.8"

dvc = { extras = ["s3"], version = "^3.59.1" }

snakemake = "^9.1.7"

mlflow = "^2.22.0"

matplotlib = "^3.10.1"

geopandas = "^1.0.1"
shapely = "^2.1.0"
pyproj = "^3.7.1"
fiona = "^1.10.1"
gdal = "^3.10.0"

black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"